# safe-pip-compile

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  deep-research-report.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
allowlist/: index.html
cache/: index.html
changelog/: index.html
cli/: index.html
configuration/: index.html
cve-filtering/: index.html
docs/: allowlist.md  cache.md  changelog.md  cli.md  configuration.md  cve-filtering.md  exit-codes.md  how-it-works.md  index.md  installation.md  network-ssl.md  output-reporting.md  proxy.md  quickstart.md
docs/research/: deep-research-report.md
exit-codes/: index.html
how-it-works/: index.html
installation/: index.html
network-ssl/: index.html
output-reporting/: index.html
proxy/: index.html
quickstart/: index.html
research/deep-research-report/: index.html
search/: search_index.json
src/safe_pip_compile/: __main__.py  allowlist.py  cache.py  cached_client.py  cli.py  config.py  constraints.py  core.py  exceptions.py  models.py  osv_client.py  parser.py  pip_compile.py  reporter.py  severity.py  terminal_ui.py
tests/: conftest.py  test_allowlist.py  test_cache.py  test_cli.py  test_constraints.py  test_core.py  test_lint.py  test_osv_client.py  test_parser.py  test_pip_compile_cache.py  test_severity.py
tests/fixtures/: sample_allowlist.yaml  sample_osv_batch.json  sample_osv_vuln.json  sample_requirements.txt
